samples/istio-toy-project/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  annotations:
    comment: This is the deployment object for the backend pods
spec:
  selector:
    matchLabels:
      microservice: backend
  replicas: 2
  template:
    metadata:
      labels:
        microservice: backend
      annotations:
        comment: This is a pod which is part of the backend deployment
    spec:
      containers:
        - name: backend
          image: ftarmedia/toymesh-backend:1
          ports:
            - containerPort: 8080
