samples/istio-toy-project/kubernetes/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    comment: This is the web deployment, which is the front-end of the app
spec:
  selector:
    matchLabels:
      microservice: web
  replicas: 2
  template:
    metadata:
      labels:
        microservice: web
      annotations:
        comment: This pod belongs to web-deployment
    spec:
      containers:
        - name: web
          image: ftarmedia/toymesh-web:1
          ports:
            - containerPort: 8081
