samples/istio-toy-project/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    comment: Service for the backend microservice
spec:
  selector:
    microservice: backend
  ports:
    - port: 8100
      targetPort: 8080
