samples/istio-toy-project/kubernetes/timeserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeserver-deployment
  annotations:
    comment: This is the deployment object for the timeserver pods
spec:
  selector:
    matchLabels:
      microservice: timeserver
  replicas: 2
  template:
    metadata:
      labels:
        microservice: timeserver
      annotations:
        comment: This is a pod which is part of the timeserver deployment
    spec:
      containers:
        - name: timeserver
          image: ftarmedia/toymesh-timeserver:2
          ports:
            - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: timeserver-service
  annotations:
    comment: Service for the timeserver microservice
spec:
  selector:
    microservice: timeserver
  ports:
    - port: 9082
      targetPort: 8082
