samples/istio-toy-project/kubernetes/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    comment: Service for the web microservice
spec:
  type: LoadBalancer
  selector:
    microservice: web
  ports:
    - port: 8101
      targetPort: 8081
