samples/istio-toy-project/kubernetes/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    comment: This is the web deployment, which is the front-end of the app
spec:
  selector:
    matchLabels:
      microservice: web
  replicas: 2
  template:
    metadata:
      labels:
        microservice: web
      annotations:
        comment: This pod belongs to web-deployment
    spec:
      containers:
        - name: web
          image: ftarmedia/toymesh-web:2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    comment: Service for the web microservice
spec:
  selector:
    microservice: web
  ports:
    - port: 9080
      targetPort: 8080
